# darkguardnet

./: .gitignore  README.md  scraper.py
dark_pattern_binary_classifier/: model.py  predictor.py
dark_pattern_classifier/: LICENSE  README.md  consts.py  model.py  predictor.py  tester.ipynb  utils.py
dark_pattern_classifier/pretrained_models/: roberta-large_4.pth
dark_pattern_classifier/training/: dataset.tsv  model_reports.md  reader.ipynb  train.ipynb  trainer.ipynb
dark_pattern_classifier/training/models/: 4_category_classifier.pth
dark_pattern_spotter/: README.md  consts.py  model.py  predictor.py  pyproject.toml  run_model.ipynb  tester.ipynb  utils.py
extension/chrome/: manifest.json
extension/chrome/popup/: popup.html  popup.js  styles.js
extension/chrome/scripts/: constants.js
extension/firefox/: manifest.json
website/: dpc_predictor.py  dps_predictor.py  home.html  scraper.py  search.html  webserver.py
website/darkguardnet/: manage.py
website/darkguardnet/darkguardnet/: asgi.py  settings.py  urls.py  wsgi.py
website/darkguardnet/webapp/: urls.py  views.py
website/darkguardnet/webapp/static/webapp/: styles.css
website/darkguardnet/webapp/templates/: loading_overlay.html  result.html  search.html
