[tool.poetry]
name = "dark-pattern-classifier"
version = "0.1.0"
description = "This is a pre-trained BERT model that performs classification of text on the basis of its resemblance to dark patterns."
authors = ["Anshu79"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
torch = "^1.10.2"
transformers = "^4.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
